--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    
     <h1>TITRE</h1>
+
+    <footer>
+        Copyright 2023
+    </footer>
+
 </body>
 </html>
